--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
         </form>
         <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
 
-        <p class="register-text">Need assistance? <a href="#">Contact Administration</a></p>
+        <p class="register-text">If you do not have your password, <a href="/register">Retrieve It </a>.</p>
         <nav class="social-media-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-x-twitter"></i></a>
